# delegation-lab

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/allocation/: index.html
api/capacity/: index.html
api/estimation/: index.html
api/intervention/: index.html
api/models/: index.html
api/topology/: index.html
api/viz/: index.html
concepts/autonomy/: index.html
concepts/capacity/: index.html
concepts/delegation/: index.html
concepts/masking/: index.html
concepts/topology/: index.html
docs/: index.md  quickstart.md
docs/api/: allocation.md  capacity.md  estimation.md  intervention.md  models.md  topology.md  viz.md
docs/concepts/: autonomy.md  capacity.md  delegation.md  masking.md  topology.md
docs/guides/: adk.md  analyze.md  interpret.md  langgraph.md  traces.md
docs/paper/: references.md  validation.md
guides/adk/: index.html
guides/analyze/: index.html
guides/interpret/: index.html
guides/langgraph/: index.html
guides/traces/: index.html
notebooks/: 01_sdlc_pipeline.ipynb  02_customer_support.ipynb  03_topology_stress_test.ipynb  04_langgraph_import.ipynb  05_adk_import.ipynb  06_paper_validation.ipynb
paper/references/: index.html
paper/validation/: index.html
quickstart/: index.html
search/: search_index.json
src/minimal_oversight/: __init__.py  _api.py  _formulae.py  allocation.py  capacity.py  estimation.py  intervention.py  models.py  schema.py  simulation.py  topology.py  viz.py
src/minimal_oversight/connectors/: __init__.py  _bridge.py  _roles.py  adk.py  langgraph.py  traces.py
tests/: test_connectors.py  test_formulae.py  test_schema.py  test_smoke.py
